syntax = "proto3";

option java_outer_classname = "LightswitchOuterClass";

option java_package = "org.hyperledger.fabric.example";

message Contract {
    string __guid = 1;

    string __implementingClassName = 2;

    string __implementingClassArchiveName = 3;

    string __implementingClassData = 4;

}
message ContractOrGUID {
    oneof either {
        Contract obj = 1;
        string guid = 2;
    }

}
message LightSwitch {
    oneof state {
        On stateOn = 1;
        Off stateOff = 2;
    }

    string __guid = 3;

    message On {
    }

    bytes brightness = 4;

    message Off {
    }

    bytes switchLocation = 5;

}
message LightSwitchOrGUID {
    oneof either {
        LightSwitch obj = 1;
        string guid = 2;
    }

}
